# Scalable_Cloud

./: .gitignore  Procfile  README.md  db.sqlite3  glue_hotel_report.py  requirements.txt
.ebextensions/: 01_django_commands.config  django.config  nginx-security.config  static.config  staticfiles.config
.elasticbeanstalk/: config.yml
.github/workflows/: deploy.yml
hotel_site/: requirements.txt  settings.py  urls.py
reservations/: .~c9_invoke_MJJiUZ.py  .~c9_invoke_og9sIj.py  admin.py  apps.py  boto_client.py  decorators.py  forms.py  models.py  search.py  service.py  spark_report.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_auto_20251108_1903.py  0003_roomtype_image.py  0004_auto_20251109_1142.py  0005_auto_20251109_1156.py  0006_auto_20251109_1156.py  0007_auto_20251109_1210.py  0008_auto_20251109_1727.py  0009_roomimage_uploaded_at.py  0010_auto_20251109_1758.py  0011_auto_20251109_1805.py
reservations/static/css/: style.css
reservations/templates/reservations/: add_room_type.html  amenities.html  book_room.html  booking_detail.html  home.html  list_room_types.html  login.html  map.html  pay_booking.html  payment.html  payment_success.html  register.html  report.html  room_detail.html  room_search.html  signup.html  verify.html
roomsearch/: README.md  __init__.py  pyproject.toml
roomsearch/app/: __init__.py  engine.py  image_service.py  main.py  routes.py  schemas.py
roomsearch/roomsearch/: __init__.py  engine.py
roomsearch/roomsearch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
roomsearch/sdk/: client.py
