[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomsearch"
version = "0.1.2"
description = "A short description of your library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Vishal Venkatesh", email="vishalv1705@gmail.com" }
]
keywords = ["python", "library"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Vishal-v-17"
